build_errors_v4_utf8.txt

> Configure project :
Fabric Loom: 1.11.8

> Task :compileJava FAILED
./gradlew : C:\Users\no
ele\.gemini\antigravity
\scratch\CelestiaAddons
\src\main\java\com\cele
stia\addons\feature\imp
l\autoroute\RouteRender
er.java:4: error: 
cannot find symbol
At line:1 char:1
+ ./gradlew 
compileJava --continue 
> build_errors_v4.txt 
2>&1; powershe ...
+ ~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~
    + CategoryInfo     
         : NotSpecifi  
  ed: (C:\Users\noel   
 e\...not find symb    
ol:String) [], Rem    
oteException
    + FullyQualifiedEr 
   rorId : NativeComm  
  andError
 
import net.fabricmc.fab
ric.api.client.renderin
g.v1.WorldRenderContext
;
                       
                       
    ^
  symbol:   class 
WorldRenderContext
  location: package net
.fabricmc.fabric.api.cl
ient.rendering.v1
C:\Users\noele\.gemini\
antigravity\scratch\Cel
estiaAddons\src\main\ja
va\com\celestia\addons\
feature\impl\autoroute\
RouteRenderer.java:5: 
error: cannot find 
symbol
import net.fabricmc.fab
ric.api.client.renderin
g.v1.WorldRenderEvents;
                       
                       
    ^
  symbol:   class 
WorldRenderEvents
  location: package net
.fabricmc.fabric.api.cl
ient.rendering.v1
C:\Users\noele\.gemini\
antigravity\scratch\Cel
estiaAddons\src\main\ja
va\com\celestia\addons\
feature\impl\autoroute\
RouteRenderer.java:31: 
error: cannot find 
symbol
    private void render
(net.fabricmc.fabric.ap
i.client.rendering.v1.W
orldRenderContext 
context) {
                       
                       
                     ^
  symbol:   class 
WorldRenderContext
  location: package net
.fabricmc.fabric.api.cl
ient.rendering.v1
C:\Users\noele\.gemini\
antigravity\scratch\Cel
estiaAddons\src\main\ja
va\com\celestia\addons\
feature\impl\StarMobEsp
Feature.java:27: 
error: cannot find 
symbol
    private void render
(net.fabricmc.fabric.ap
i.client.rendering.v1.W
orldRenderContext 
context) {
                       
                       
                     ^
  symbol:   class 
WorldRenderContext
  location: package net
.fabricmc.fabric.api.cl
ient.rendering.v1
C:\Users\noele\.gemini\
antigravity\scratch\Cel
estiaAddons\src\main\ja
va\com\celestia\addons\
feature\impl\StarMobEsp
Feature.java:59: 
error: cannot find 
symbol
    private void drawEs
pBox(net.fabricmc.fabri
c.api.client.rendering.
v1.WorldRenderContext 
context,
                       
                       
                       
  ^
  symbol:   class 
WorldRenderContext
  location: package net
.fabricmc.fabric.api.cl
ient.rendering.v1
5 errors

[Incubating] Problems report is available at: file:///C:/Users/noele/.gemini/antigravity/scratch/CelestiaAddons/build/reports/problems/problems-report.html

FAILURE: Build failed 
with an exception.

* What went wrong:
Execution failed for 
task ':compileJava'.
> Compilation failed; 
see the compiler 
output below.
  C:\Users\noele\.gemin
i\antigravity\scratch\C
elestiaAddons\src\main\
java\com\celestia\addon
s\feature\impl\autorout
e\RouteRenderer.java:4:
 error: cannot find 
symbol
  import net.fabricmc.f
abric.api.client.render
ing.v1.WorldRenderConte
xt;
                       
                       
      ^
    symbol:   class 
WorldRenderContext
    location: package n
et.fabricmc.fabric.api.
client.rendering.v1
  C:\Users\noele\.gemin
i\antigravity\scratch\C
elestiaAddons\src\main\
java\com\celestia\addon
s\feature\impl\autorout
e\RouteRenderer.java:5:
 error: cannot find 
symbol
  import net.fabricmc.f
abric.api.client.render
ing.v1.WorldRenderEvent
s;
                       
                       
      ^
    symbol:   class 
WorldRenderEvents
    location: package n
et.fabricmc.fabric.api.
client.rendering.v1
  C:\Users\noele\.gemin
i\antigravity\scratch\C
elestiaAddons\src\main\
java\com\celestia\addon
s\feature\impl\autorout
e\RouteRenderer.java:31
: error: cannot find 
symbol
      private void rend
er(net.fabricmc.fabric.
api.client.rendering.v1
.WorldRenderContext 
context) {
                       
                       
                       
^
    symbol:   class 
WorldRenderContext
    location: package n
et.fabricmc.fabric.api.
client.rendering.v1
  C:\Users\noele\.gemin
i\antigravity\scratch\C
elestiaAddons\src\main\
java\com\celestia\addon
s\feature\impl\StarMobE
spFeature.java:27: 
error: cannot find 
symbol
      private void rend
er(net.fabricmc.fabric.
api.client.rendering.v1
.WorldRenderContext 
context) {
                       
                       
                       
^
    symbol:   class 
WorldRenderContext
    location: package n
et.fabricmc.fabric.api.
client.rendering.v1
  C:\Users\noele\.gemin
i\antigravity\scratch\C
elestiaAddons\src\main\
java\com\celestia\addon
s\feature\impl\StarMobE
spFeature.java:59: 
error: cannot find 
symbol
      private void draw
EspBox(net.fabricmc.fab
ric.api.client.renderin
g.v1.WorldRenderContext
 context,
                       
                       
                       
    ^
    symbol:   class 
WorldRenderContext
    location: package n
et.fabricmc.fabric.api.
client.rendering.v1
  5 errors

* Try:
> Check your code and 
dependencies to fix 
the compilation 
error(s)
> Run with --scan to 
get full insights.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 9.0.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/8.14/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 3s
1 actionable task: 1 executed
